--- a/src/shared/components/modal-window/modal-window.component.html
+++ b/src/shared/components/modal-window/modal-window.component.html
@@ -1,4 +1,4 @@
-<div class="modal-window">
+<div [ngClass]="{'modal-window': true, 'modal-window-active': isOpened}">
   <div class="modal-window-body">
     <ng-content></ng-content>
   </div>
