--- a/src/shared/components/modal-window/modal-window.component.css
+++ b/src/shared/components/modal-window/modal-window.component.css
@@ -4,6 +4,11 @@
   z-index: 10000;
   border: 1px solid red;
   background-color: rgba(0, 0, 0, .75);
+  display: none;
+}
+
+.modal-window.modal-window-active {
+  display: block;
 }
 
 .modal-window .modal-window-body {
